--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # Ignore Mac system files
 **/.DS_Store
 ~$1015 proj notes.docx
-.ipynb_checkpoints/
+.ipynb_checkpoints
+**/.ipynb_checkpoints/*
+*/.ipynb_checkpoints/*.ipynb
